--- a/portifolio/index.html
+++ b/portifolio/index.html
@@ -241,8 +241,8 @@
                             <img src="img/aws.jpg" alt="AWS Cloud Computing" class="h-full w-auto object-contain">
                         </div>
                         <div class="p-6">
-                            <h3 class="text-xl font-bold mb-2 dark:text-white">AWS Cloud Computing</h3>
-                            <p class="text-gray-600 dark:text-gray-300">Certificado de conclusão do curso de Cloud Computing da AWS.</p>
+                            <h3 class="text-xl font-bold mb-2 dark:text-white">AWS Academy Cloud Foundations</h3>
+                            <p class="text-gray-600 dark:text-gray-300">Certificado de conclusão do curso da AWS Academy Cloud Foundations.</p>
                         </div>
                     </div>
                 </div>
