--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
                             </div>
                             <div>
                                 <p class="text-gray-500 dark:text-gray-400">LinkedIn</p>
-                                <a href="https://www.linkedin.com/in/eduarda-noronha-a8a2882b8/" target="_blank" class="text-gray-800 dark:text-white hover:text-primary-600 dark:hover:text-primary-400 transition-colors">linkedin.com/in/eduarda-noronha</a>
+                                <a href="https://www.linkedin.com/in/eduardanoronha/" target="_blank" class="text-gray-800 dark:text-white hover:text-primary-600 dark:hover:text-primary-400 transition-colors">linkedin.com/in/eduarda-noronha</a>
                             </div>
                         </div>
                         
@@ -360,7 +360,7 @@
                 <span class="text-sm text-gray-500 sm:text-center dark:text-gray-400">© 2024 <a href="#" class="hover:underline text-primary-600 dark:text-primary-400">Eduarda Noronha</a>. Todos os direitos reservados.
                 </span>
                 <div class="flex mt-4 sm:justify-center sm:mt-0">
-                    <a href="https://www.linkedin.com/in/eduarda-noronha-a8a2882b8/" target="_blank" class="text-gray-500 hover:text-gray-900 dark:hover:text-white ms-5">
+                    <a href="https://www.linkedin.com/in/eduardanoronha/" target="_blank" class="text-gray-500 hover:text-gray-900 dark:hover:text-white ms-5">
                         <i class="fab fa-linkedin-in text-xl"></i>
                         <span class="sr-only">LinkedIn</span>
                     </a>
