--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                     <span class="text-primary-600">Eduarda</span> Noronha
                 </h1>
                 <p class="mb-6 font-light text-gray-600 md:text-lg lg:text-xl dark:text-gray-300">
-                    Desenvolvedora Full-Stack com experiência em Python, Arduino, redes de computadores e manutenção de hardware. 
+                    Desenvolvedora Back-End com experiência em Python, Arduino, redes de computadores e manutenção de hardware. 
                     Tenho habilidades em criar soluções completas, desde o desenvolvimento de sistemas até a otimização de 
                     infraestrutura e redes. Sempre buscando inovar, busco entregar soluções eficientes e de alta qualidade.
                 </p>
@@ -281,6 +281,19 @@
                         <div class="p-6">
                             <h3 class="text-xl font-bold mb-2 dark:text-white">Organização de Evento</h3>
                             <p class="text-gray-600 dark:text-gray-300">Certificado de participação na organização do evento ERETEC.</p>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Certificado 3 -->
+                <div class="px-4">
+                    <div class="bg-white dark:bg-gray-700 rounded-lg overflow-hidden shadow-lg">
+                        <div class="h-64 overflow-hidden bg-gray-200 flex items-center justify-center p-4">
+                            <img src="img/certificadogoole.png" alt="Certificação Google" class="h-full w-auto object-contain">
+                        </div>
+                        <div class="p-6">
+                            <h3 class="text-xl font-bold mb-2 dark:text-white">Certificação Coursera</h3>
+                            <p class="text-gray-600 dark:text-gray-300">Google Cybersecurity Professional Certificate V2.</p>
                         </div>
                     </div>
                 </div>
